2009-04-24  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.h
	* src/lastfm-ws.c (+lastfm_ws_tag_track):
	Method to tag tracks using the new API (it's a wrapper for the old
	API by now).

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/xmlrpc.h
	* src/xmlrpc.c (+recommend_track):
	Bring back recommend_track(), at least while the v2.0 API doesn't
	have an album.share method.

	* src/lastfm-ws.c (lastfm_ws_share_track):
	Use the old API to share (recommend) albums.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.c
	(lastfm_ws_session_new, lastfm_ws_session_unref)
	(lastfm_ws_get_session_from_token, lastfm_ws_get_session):
	Store password in LastfmWsSession object.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/xmlrpc.c (-recommend_track, -love_ban_track):
	Remove deprecated methods to love, ban and recommend.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(controller_recomm_track, recomm_track_thread):
	Use the recommend (share) method from the v2.0 API

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/scrobbler.c (rsp_init, +connected_cb, +disconnected_cb)
	(rsp_scrobbler_thread_scrobble, rsp_scrobbler_thread):
	Use love/ban methods from the v2.0 API.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(vgl_controller_class_init, check_session_thread):
	Make the session object parameter of the 'connected' signal.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c (-lastfm_set_radio)
	(-lastfm_session_copy, -lastfm_request_playlist):
	Remove unused methods from the legacy streaming API.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c (lastfm_session_new):
	Remove the 'subscriber' attribute from the legacy session object.

	* src/lastfm-ws.h
	* src/lastfm-ws.c
	(+lastfm_ws_session_get_v1_session, lastfm_ws_session_new)
	(lastfm_ws_session_unref, lastfm_ws_get_session):